WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11828
ResourceRequest leaks NSURLRequests
https://bugs.webkit.org/show_bug.cgi?id=11828
Summary
ResourceRequest leaks NSURLRequests
Alexey Proskuryakov
Reported
2006-12-14 07:07:06 PST
ResourceRequest leaks NSURLRequests in doUpdatePlatformRequest().
Attachments
proposed fix
(1023 bytes, patch)
2006-12-14 07:07 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
proposed fix
(1.05 KB, patch)
2006-12-14 09:22 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2006-12-14 07:07:42 PST
Created
attachment 11837
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2006-12-14 09:22:24 PST
Created
attachment 11839
[details]
proposed fix Mitz suggested to use adopt() instead of manually releasing.
Darin Adler
Comment 3
2006-12-14 09:42:11 PST
Comment on
attachment 11839
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 4
2006-12-14 10:18:41 PST
Committed revision 18215.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug