        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=11828
        Fix a leak of NSURLRequest on each update - RetainPtr retains the object itself.

        * platform/network/mac/ResourceRequestMac.mm:
        (WebCore::ResourceRequest::doUpdatePlatformRequest):



git-svn-id: svn://svn.chromium.org/blink/trunk@18215 bbb929c8-8fbe-4397-9dbb-9b2b20218538