third_party/WebKit/WebCore/platform/network/mac/ResourceRequestMac.mm
@@ -91,7 +91,7 @@ void ResourceRequest::doUpdatePlatformRequest()
     if (formData && !formData->isEmpty())
         WebCore::setHTTPBody(nsRequest, formData);
     
-    m_nsRequest = nsRequest;
+    m_nsRequest.adopt(nsRequest);
 }
 
 }
